2-0/default/data/steps/kgateway-labs/shared-gw/httpbin-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
    sectionName: httpbin-https
  rules:
  - backendRefs:
    - name: httpbin
      port: 8000
